增加需求可以调整html宽度，水平对齐，垂直对齐

--- a/index.html
+++ b/index.html
@@ -105,6 +105,32 @@
                             <option value="custom">自定义</option>
                         </select>
                     </div>
+                    <div class="setting-item">
+                        <label for="tableWidth">表格宽度：</label>
+                        <select id="tableWidth" class="style-select">
+                            <option value="auto">自动宽度</option>
+                            <option value="fit-content">适应内容</option>
+                            <option value="100%">100%宽度</option>
+                            <option value="800px">800px固定</option>
+                            <option value="600px">600px固定</option>
+                        </select>
+                    </div>
+                    <div class="setting-item">
+                        <label for="horizontalAlign">水平对齐：</label>
+                        <select id="horizontalAlign" class="style-select">
+                            <option value="left">左对齐</option>
+                            <option value="center">居中对齐</option>
+                            <option value="right">右对齐</option>
+                        </select>
+                    </div>
+                    <div class="setting-item">
+                        <label for="verticalAlign">垂直对齐：</label>
+                        <select id="verticalAlign" class="style-select">
+                            <option value="top">顶部对齐</option>
+                            <option value="middle">中间对齐</option>
+                            <option value="bottom">底部对齐</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
